[package]
name = "calceph-sys"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Huxulm <huxulm@gmail.com>"]
documentation = "https://docs.rs/calceph-sys"
description = "Rust FFI bindings to the calceph library for astronomical computations."
keywords = ["astronomy", "calceph"]
readme = "README.md"
links = "calceph"
exclude = [
    "examples/example1.dat"
]

[build-dependencies]
cmake = "0.1"
bindgen = "0.71.1"
reqwest = { version = "0.12.20", features = ["blocking"], optional = true }

[features]
calceph-src = ["reqwest"]