[package]
name = "libcspice-sys"
license = "MIT"
version = "0.1.4"
edition = "2024"
links = "cspice"
description = "Rust FFI bindings to the CSPICE library for astronomical computations."
authors = ["Huxulm <huxulm@gmail.com>"]
documentation = "https://docs.rs/libcspice-sys"
keywords = ["astronomy", "cspice"]
readme = "README.md"
exclude = [
    "tests/data"
]

[dependencies]

[build-dependencies]
cc = "1.0.46"
bindgen = "0.71.1"
reqwest = { version = "0.12.20", features = ["blocking"], optional = true }

[features]
cspice-src = ["reqwest"]
