[package]
name = "supernovas-sys"
license = "MIT"
version = "0.1.4"
edition = "2024"
links = "supernovas"
authors = ["Huxulm <huxulm@gmail.com>"]
documentation = "https://docs.rs/supernovas-sys"
description = "Rust FFI bindings to the supernovas library for astronomical computations."
keywords = ["astronomy", "supernovas"]
readme = "README.md"
exclude = [
    "examples/data"
]

[dependencies]
libcspice-sys = { version = "0.1.4", path = "../libcspice-sys", features = [] }
calceph-sys = { version = "0.1.4", path = "../calceph-sys", features = [] }

[build-dependencies]
cc = "1.0.46"
bindgen = "0.71.1"
reqwest = { version = "0.12.20", features = ["blocking"], optional = true }

[features]
default = []
novas-src = ["reqwest"]
cspice-src = ["libcspice-sys/cspice-src"]
calceph-src = ["calceph-sys/calceph-src"]